--- a/src/content/speaking/tdc-2023.md
+++ b/src/content/speaking/tdc-2023.md
@@ -1,7 +1,7 @@
 ---
 organizer: Trondheim Developer Conference 2023
 date: 2023-10-23T08:00:00Z
-name: "Astro: The New Era of Fast, Modern Websites that ships zero JavaScript by default"
+name: "Talk: Astro: The New Era of Fast, Modern Websites that ships zero JavaScript by default"
 completed: true
 websiteLink: "https://2023.trondheimdc.no"
 description: "Introducing Astro, the revolutionary web framework that builds faster, modern websites. It blends MPAs and SPAs for high-performance and developer-friendly applications. Explore Astro Islands, combining interactive components with static HTML for optimal performance. See how partial hydration enables fast, parallel loading, delivering a superior user experience without compromising speed."
