--- a/src/content/speaking/tdc-2024.md
+++ b/src/content/speaking/tdc-2024.md
@@ -3,6 +3,7 @@ organizer: Trondheim Developer Conference 2024
 date: 2024-10-21T08:00:00Z
 name: "Talk: React Server Components: A New Way to Build Fast and Interactive Web Apps"
 completed: true
+link: "https://www.youtube.com/watch?v=FLnmdh4zJAs"
 websiteLink: "https://2024.trondheimdc.no"
 description: "Discover React Server Components: render React components on the server, stream them to the client, and build rich, interactive web interfaces with minimal client-side code. Learn how they work, and their benefits over traditional approaches, see real-world examples, and get best practices for adopting them in your projects."
 ---
