--- a/src/content/speaking/init-2025.md
+++ b/src/content/speaking/init-2025.md
@@ -3,6 +3,6 @@ organizer: INIT Conference
 date: 2025-10-10T08:00:00Z
 name: "Talk: React Server Components: A New Way to Build Fast and Interactive Web Apps"
 completed: false
-websiteLink: "https://initconf.org/"
+websiteLink: "https://initconf.org"
 description: "Discover React Server Components: render React components on the server, stream them to the client, and build rich, interactive web interfaces with minimal client-side code. Learn how they work, and their benefits over traditional approaches, see real-world examples, and get best practices for adopting them in your projects."
 ---
