--- a/src/content/speaking/init-2025.md
+++ b/src/content/speaking/init-2025.md
@@ -1,5 +1,5 @@
 ---
-organizer: INIT Conference
+organizer: INIT Conference 2025
 date: 2025-10-10T08:00:00Z
 name: "Talk: React Server Components: A New Way to Build Fast and Interactive Web Apps"
 completed: false
